# eshopmigration

./: .gitignore  AGENT_RESPONSIBILITIES_AND_FLOW.md  CLAUDE.md  DATA_REQUIREMENTS_STATUS.md  IMPLEMENTATION_COMPLETE.txt  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  QUICKSTART.md  QUICK_START.md  README.md  RUNTIME_CAPTURE_GUIDE.md  seams.txt
.claude/: PARITY_VERIFICATION_ARCHITECTURE.md  settings.json  test-hook-simple.sh
.claude/agents/: 001-migration-orchestrator.md  101-legacy-context-fabric.md  102-ui-inventory-extractor.md  103-golden-baseline-capture.md  104-discovery.md  105-spec-agent.md  106-dependency-wrapper.md  107-backend-migration.md  107-implementation-agent.md  108-frontend-migration.md  109-code-security-reviewer.md  109-parity-harness-generator.md  110-parity-harness-generator.md  architecture-bootstrap.md  backend-migration.md  contract-generator.md  data-strategy.md  dependency-wrapper.md  discovery.md  frontend-migration.md  golden-baseline-capture.md  legacy-context-fabric.md  parity-harness-generator.md  runtime-surface-capture.md  ui-inventory-extractor.md
.claude/hooks/: DATA_CAPTURE_ARCHITECTURE.md  HOOKS_SUMMARY.md  README.md  TROUBLESHOOTING.md  capture-dependency-scan.sh  capture-file-changes.sh  capture-lighthouse-metrics.sh  capture-quality-metrics.sh  convert-ui-behavior-to-json.sh  log-agent-start-FIXED.sh  log-agent-start-NO-JQ.sh  log-agent-start.sh  log-agent-stop.sh
.claude/rules/: architecture-scaffold.md  python-backend.md  python-platform-wrappers.md  react-frontend.md
.claude/scripts/: apply-gap-fixes.md  auto-fix-seam.sh  auto-fix.sh  code-quality-check.sh  compare_screenshots.py  hooks-integration.md  hooks_integration.py  parse-ui-behavior-to-json.py  post-code-hook.sh  post-implementation-hook.sh  security-analysis.sh  validate_contract_backend.py  (+1 more)
backend/: .env.example  README.md  pyproject.toml  test_catalog_list.py  test_mock.py  test_output.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/catalog/: __init__.py  lookup_router.py  lookup_service.py  models.py  router.py  schemas.py  service.py
backend/app/core/: config.py  db.py  exceptions.py  logging.py  models.py  schemas.py  seed.py  service.py
backend/app/images/: __init__.py  router.py  service.py
backend/seeds/: catalog_seed.py  catalog_seed_simple.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_contract.py  test_catalog_api.py  test_catalog_crud.py
backend/tests/parity/: README.md  README_CATALOG_CRUD.md  conftest.py  test_catalog_crud_exports.py  test_catalog_crud_validation.py  test_catalog_list_api_parity.py  test_catalog_list_data_validation.py
backend/tests/unit/: test_catalog_service.py  test_catalog_validation.py  test_image_service.py
docs/: AGENT_EXECUTION_STATUS.md  BASELINE_BLOCKERS.md  SYNTHETIC_BASELINE_STRATEGY.md  implementation-roadmap.md  seam-governance.md
frontend/: .env.example  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
legacy-golden/: BASELINE_INDEX.md  BROWSER_AGENT_REPORT.md  DISCOVERY_REPORT.md  DISCOVERY_SUMMARY.md  INDEX.md  README.md  grid-data.json  ui-elements.json  workflows.json
scripts/: copy-legacy-assets.sh
(+296 files in other folders)
